# certified-dp

./: .gitignore  Cargo.toml  LICENSE  README.md  eval.sh  experiment.py
census/: census.sh  census_pums_2018.csv  pack_database.py
eval/: eval-results.ipynb  eval.sh
src/: bit_sigma.rs  config.rs  constants.rs  data.rs  lib.rs  main.rs  messages.rs  pedersen.rs  product_sigma.rs
