[package]
name = "vdp-proof-of-concept"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
curve25519-dalek = { version = "4.1.1", features = ["rand_core"] }
tiny_ped_com = { path = "./tiny_ped_com" }