[package]
name = "certified-dp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "4.1.1", features = ["rand_core", "serde"] }
num-traits = "0.2"
rand = "0.8.4"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = {version = "4.4.18", features = ["derive"] }
indicatif = "0.17"
prettytable = "0.10"
flate2 = "1.0.28"
